samples/_failures_safe/1761492587_025b8b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4f00c947.c: In function ‘main’:
./samples/SAFE/__tmp_4f00c947.c:162:9: error: expected expression at end of input
  162 |         {EVENT_START,
      |         ^
./samples/SAFE/__tmp_4f00c947.c:162:9: error: expected declaration or statement at end of input
